Backend - fixed CORS and build on Docker